--- a/.github/workflows/gcloud_auth_test.yaml
+++ b/.github/workflows/gcloud_auth_test.yaml
@@ -22,6 +22,7 @@ jobs:
           token_format: "access_token"
           workload_identity_provider: "projects/466920785800/locations/global/workloadIdentityPools/github-pool/providers/github"
           service_account: "github-actions-publisher@carbide-network-454120-i8.iam.gserviceaccount.com"
+          audience: "https://github.com/bocekout/FocusFlow"
 
       - name: Verify gcloud auth
         run: gcloud auth list
